CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OUTPUT_PATH ${CMAKE_BINARY_DIR}/../bin)
SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_PATH})
SET(LIBRARY_OUTPUT_PATH ${OUTPUT_PATH})

SET(CMAKE_CXX_FLAGS "-Wall")

SET(PROJECT_MAJOR_VERSION 0)
SET(PROJECT_MINOR_VERSION 0)

ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(Example)
ADD_SUBDIRECTORY(Graphic_OpenGL)

