PROJECT(Graphic_OpenGL)

SET(NAME Graphic_OpenGL)

SET(SOURCES
  Window/Window_OpenGL.cpp
  Graphic_OpenGL.cpp
  )

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(SDL REQUIRED)

INCLUDE_DIRECTORIES(include ${SDL_INCLUDE_DIR} ${FREETYPE_INCLUDE})

ADD_LIBRARY(${NAME} SHARED ${SOURCES})

TARGET_LINK_LIBRARIES(
  ${NAME}
  ${OPENGL_LIBRARIES}
  ${SDL_LIBRARY}
  SDLmain
  )
