PROJECT(Graphic_OpenGL)

SET(NAME Graphic_OpenGL)

SET(SOURCES
	Window/Window_OpenGL.cpp
	Graphic_OpenGL.cpp
	)

IF(UNIX)
	SET_SOURCE_FILES_PROPERTIES(${SOURCES} COMPILE_FLAGS "-DUNIX -DMAJOR=${PROJECT_MAJOR_VERSION} -DMINOR=${PROJECT_MINOR_VERSION}")
ENDIF(UNIX)

IF(WIN32)
	SET_SOURCE_FILES_PROPERTIES(${SOURCES} COMPILE_FLAGS "-DWIN -DMAJOR=${PROJECT_MAJOR_VERSION} -DMINOR=${PROJECT_MINOR_VERSION}")
ENDIF(WIN32)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(SDL REQUIRED)

INCLUDE_DIRECTORIES(include ${SDL_INCLUDE_DIR})

ADD_LIBRARY(${NAME} SHARED ${SOURCES})

TARGET_LINK_LIBRARIES(
	${NAME}
	${OPENGL_LIBRARIES}
	${SDL_LIBRARY}
	)
